<resources>
    <string name="app_name">תכלית</string>

    <!-- Main Activity -->
    <string name="app_logo">לוגו אפליקציית תכלית</string>
    <string name="welcome_subtitle">שרשרת החסד והתורה למען ישראל</string>
    <string name="choose_your_role">בחר מה תרצה לעשות</string>

    <!-- User Roles -->
    <string name="learn_asker_title">אני רוצה ללמוד</string>
    <string name="learn_asker_description">הירשם כדי לבקש חברותא</string>

    <string name="learn_giver_title">אני רוצה ללמד</string>
    <string name="learn_giver_description">הירשם כדי להתנדב ללמד</string>

    <string name="office_volunteer_title">אני רוצה להתנדב</string>
    <string name="office_volunteer_description">הירשם כדי להתנדב לעבודה משרדית</string>

    <string name="food_volunteer_title">אני רוצה להתנדב</string>
    <string name="food_volunteer_description">הירשם כדי להתנדב לאריזת חבילות מזון</string>

    <string name="donations_title">תרומות</string>
    <string name="donations_description">לחץ כאן לתרומות</string>
    <string name="donations_link_text">לחץ על לינק זה כדי לתרום לתכלית</string>
    <string name="donations_url">https://www.tachlit.org.il/donations</string>
    <string name="jgive_card_description">לחץ כאן לתרומה דרך J-Give</string>
    <string name="jgive_link_text">לחץ על לינק זה כדי לתרום דרך J-Give</string>
    <string name="jgive_url">https://www.jgive.com/new/en/ils/charity-organizations/3074</string>

    <string name="supervisor_title">מנהל</string>
    <string name="supervisor_description">כניסה למנהלים</string>
    <string name="group_coordinator_title">רכזי קבוצות</string>
    <string name="group_coordinator_description">הירשם כרכז קבוצה</string>

    <!-- Common -->
    <string name="name">שם</string>
    <string name="family_name">שם משפחה</string>
    <string name="email">אימייל</string>
    <string name="phone">טלפון</string>
    <string name="city">עיר</string>
    <string name="password">סיסמה</string>
    <string name="register">הירשם</string>
    <string name="login">התחבר</string>
    <string name="cancel">ביטול</string>
    <string name="save">שמור</string>
    <string name="edit">ערוך</string>
    <string name="delete">מחק</string>

    <!-- Learn Asker Registration -->
    <string name="subjects_to_learn">מקצועות שאני רוצה ללמוד</string>
    <string name="learning_goals">מטרות הלמידה</string>
    <string name="preferred_schedule">לוח זמנים מועדף</string>
    <string name="experience_level">רמת ניסיון</string>
    <string name="additional_notes">הערות נוספות</string>
    <string name="experience_beginner">מתחיל</string>
    <string name="experience_intermediate">בינוני</string>
    <string name="experience_advanced">מתקדם</string>

    <!-- Learn Giver Registration -->
    <string name="subjects_can_teach">מקצועות שאני יכול ללמד</string>
    <string name="teaching_experience">ניסיון בהוראה</string>
    <string name="available_schedule">לוח זמנים פנוי</string>
    <string name="max_students">מספר תלמידים מקסימלי</string>
    <string name="teaching_style">סגנון הוראה</string>
    <string name="group_name">שם הקבוצה</string>
    <string name="group_type">סוג הקבוצה</string>
    <string name="number_of_participants">מספר משתתפים</string>
    <string name="youth">נוער</string>
    <string name="adult">מבוגר</string>
    <string name="tourist">תיירים</string>

    <!-- Dashboard -->
    <string name="welcome_back">ברוך שובך</string>
    <string name="my_profile">הפרופיל שלי</string>
    <string name="my_teacher">המורה שלי</string>
    <string name="my_students">התלמידים שלי</string>
    <string name="no_teacher_assigned">עדיין לא שובץ מורה</string>
    <string name="no_students_assigned">עדיין לא שובצו תלמידים</string>

    <!-- Supervisor -->
    <string name="all_users">כל המשתמשים</string>
    <string name="unmatched_learners">לומדים שלא שובצו</string>
    <string name="available_teachers">מורים זמינים</string>
    <string name="suggested_matches">הצעות שיבוץ</string>
    <string name="create_pairing">צור שיבוץ</string>
    <string name="filter_by_city">סנן לפי עיר</string>
    <string name="compatibility_score">התאמה: %1$d%%</string>

    <!-- Messages -->
    <string name="registration_successful">ההרשמה הושלמה בהצלחה!</string>
    <string name="login_successful">ההתחברות הושלמה בהצלחה!</string>
    <string name="invalid_credentials">פרטי התחברות שגויים</string>
    <string name="pairing_successful">השיבוץ נוצר בהצלחה!</string>
    <string name="pairing_failed">יצירת השיבוץ נכשלה</string>
    <string name="error_occurred">אירעה שגיאה</string>
    <string name="please_fill_all_fields">אנא מלא את כל השדות הנדרשים</string>

    <!-- Supervisor Login -->
    <string name="supervisor_password">סיסמת מנהל</string>
    <string name="invalid_supervisor_password">סיסמת מנהל שגויה</string>

    <!-- Section Headers -->
    <string name="personal_information">מידע אישי</string>
    <string name="group_information">מידע על הקבוצה</string>
    <string name="learning_information">מידע לימודים</string>

    <!-- Arrays -->
    <string-array name="experience_levels">
        <item>@string/experience_beginner</item>
        <item>@string/experience_intermediate</item>
        <item>@string/experience_advanced</item>
    </string-array>

    <string-array name="group_types">
        <item>@string/youth</item>
        <item>@string/adult</item>
        <item>@string/tourist</item>
    </string-array>

    <!-- Push notifications -->
    <string name="send_notification_title">Send push notification</string>
    <string name="send_notification_hint_title">Notification title</string>
    <string name="send_notification_hint_body">Notification message</string>
    <string name="send_notification_select_roles">Send to roles</string>
    <string name="send_notification_send">Send notification</string>
    <string name="send_notification_missing_fields">Please fill in both title and message</string>
    <string name="send_notification_no_role">Please select at least one role</string>
    <string name="supervisor_send_notification_button">Send push notification</string>

    <!-- Session / role home -->
    <string name="logout">התנתק</string>
    <string name="role_home_title">האזור האישי שלי</string>
    <string name="role_home_greeting">שלום %1$s</string>
    <string name="role_home_subtitle">זהו האזור האישי שלך באפליקציית תכלית.\nכאן תוכל לראות את הפעילויות שלך.</string>
    <string name="role_home_activities_title">הפעילויות שלי</string>
    <string name="role_home_activities_empty">אין לך עדיין פעילויות. בקרוב תוכל לראות כאן את השיעורים, ההתנדבויות והשידוכים שלך.</string>
    <string name="role_home_role_label">התפקיד שלך: %1$s</string>
    <string name="role_learn_asker">לומד</string>
    <string name="role_learn_giver">מורה / מלמד</string>
    <string name="role_office_volunteer">מתנדב משרדי</string>
    <string name="role_food_volunteer">מתנדב חלוקת מזון</string>
    <string name="role_group_coordinator">רכז קבוצה</string>
    <string name="role_supervisor">מנהל</string>
    <string name="logout_confirm_title">התנתקות</string>
    <string name="logout_confirm_message">האם אתה בטוח שברצונך להתנתק?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
</resources>
